<resources>
    <string name="app_name">ROEC Scanner</string>

    <!--  ***** CONTENT DESCRIPTIONS *****  -->

    <!--  Buttons  -->
    <string name="content_desc_gallery">Upload</string>
    <string name="content_desc_capture">Capture</string>
    <string name="content_desc_flash">Flash Toggle</string>
    <string name="content_desc_back">Back</string>

    <!--  Image Views  -->
    <string name="content_desc_logo">NTC Logo</string>

    <!--  ***** TEXT / STRINGS *****  -->

    <!--  Card Views  -->
    <string name="card_popup_scan_status">Scan Complete</string>

    <!--  Text Button Views  -->
    <string name="button_text_scan">Scan Answer Sheets</string>
    <string name="button_text_key">Answer Keys</string>
    <string name="button_text_results">View Scanned Results</string>
    <string name="card_popup_button_text_scan_results">Tap here to see results</string>
    <string name="button_text_save_changes">Save Changes</string>
    <string name="button_text_delete_all">Delete All</string>
    <string name="button_text_export_to_csv">Export to CSV</string>

    <!--  Text Views -->
    <string name="text_roec">ROEC</string>
    <string name="help_change_exam">Select rows to change their Exam Type. Note: Changing an exam type will permanently wipe its existing element scores.</string>
    <string name="text_manual_absentee_entry">Manual Absentee Entry</string>
    <string name="text_absentee_entry_instructions">Type a seat number (e.g., 5) or range (e.g., 10–15) and press Space or Enter.</string>
    <string name="title_text_exam_date">Exam Date</string>
    <string name="hint_text_date_format">MM/DD/YYYY</string>
    <string name="title_text_region">Region</string>
    <string name="title_text_place_of_exam">Place of Exam</string>
    <string name="hint_text_place_of_exam">e.g. TIP QC</string>
    <string name="toggle_status_format">%1$s: %2$s</string>



    <!--  Strings used for fragments for navigation  -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="no_data_text">No data yet</string>
    <string name="btn_text_change_exam_types">Change Exam Types</string>
    <string name="content_desc_menu_button">Results Screen Menu Button</string>
    <string name="hint_select_region">Select Region</string>
    <string name="hint_seat_number_or_range">Seat No. or Range</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="btn_save_absentees">Save Absentees</string>
    <string name="text_answer_key">Answer Key</string>
    <string name="content_desc_manual_absentee_entry">Manual Absentee Entry</string>
    <string name="text_processing">Processing image…</string>
    <string name="btn_text_change">Change</string>
    <string name="btn_text_save_and_return"><![CDATA[Save & Return]]></string>
    <string name="loading_connecting_to_google_drive">Connecting to Google Drive…</string>
    <string name="button_text_toggle_legends">Toggle Legends</string>
    <string name="button_text_fix_warp">Fix Warp</string>
    <string name="button_text_exit_toggle">Exit Toggle</string>
    <string name="button_text_back">Back</string>
    <string name="toggle_text_shown">Shown</string>
    <string name="toggle_text_hidden">Hidden</string>
    <string name="button_text_save_exit"><![CDATA[Save & Exit]]></string>

    <string-array name="element_tests">
        <item>Element 1</item>
        <item>Element 2</item>
        <item>Element 3</item>
        <item>Element 4</item>
        <item>Element 5</item>
        <item>Element 6</item>
        <item>Element 7</item>
        <item>Element 8</item>
        <item>Element 9</item>
        <item>Element 10</item>
    </string-array>

</resources>