<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- CAMERA PREVIEW (BACKGROUND) -->
    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
    </androidx.camera.view.PreviewView>

    <ImageButton
        android:id="@+id/btn_capture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:padding="25dp"
        android:background="@drawable/ripple_effect_white"
        android:contentDescription="@string/content_desc_capture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925"
        app:layout_constraintWidth_percent="0.25"
        app:srcCompat="@drawable/ic_capture" />

    <ImageButton
        android:id="@+id/btn_upload"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:padding="10dp"
        android:background="@drawable/ripple_effect_white"
        android:contentDescription="@string/content_desc_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925"
        app:layout_constraintWidth_percent="0.15"
        app:srcCompat="@drawable/ic_gallery" />

    <ImageButton
        android:id="@+id/btn_flash"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:padding="15dp"
        android:background="@drawable/ripple_effect_yellow"
        android:contentDescription="@string/content_desc_flash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925"
        app:layout_constraintWidth_percent="0.15"
        app:srcCompat="@drawable/ic_flash_off" />

</androidx.constraintlayout.widget.ConstraintLayout>
